--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ MarkupSafe==2.1.3
 packaging==23.2
 redis==5.0.1
 requests==2.31.0
-sad_libraries @ git+https://github.com/chrisjohnson00/plex-sad-libraries.git@initial-version
-setuptools==69.0.3
+sad_libraries @ git+https://github.com/chrisjohnson00/plex-sad-libraries.git@a619a865e8171e2f797c2b51dad76595747ef52d
+setuptools==69.0.2
 urllib3==2.1.0
 Werkzeug==3.0.1
 wheel==0.42.0
