--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+async-timeout==4.0.3
 blinker==1.7.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
@@ -9,10 +10,9 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 packaging==23.2
+pulsar-client==3.4.0
 redis==5.0.1
 requests==2.31.0
 sad_libraries @ git+https://github.com/chrisjohnson00/plex-sad-libraries.git@a619a865e8171e2f797c2b51dad76595747ef52d
-setuptools==69.0.2
 urllib3==2.1.0
 Werkzeug==3.0.1
-wheel==0.42.0
